--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,11 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.2.0-alpha04'
 
+    implementation 'com.mikhaellopez:circleview:1.0.3'
+    implementation 'com.loopeer.lib:shadow:0.0.3'
+
+
+
     //implementation 'com.github.traex.rippleeffect:library:1.3'
 
 }
